# flexible-channels

client/cli/src/: main.rs
client/lib/src/: group.rs  lib.rs  messenger.rs
client/lib/src/message/: chunk.rs  cleartext.rs  mod.rs  stream.rs  structured.rs  to_message_bytes.rs
client/lib/tests/: test.rs
template/Chapters/: 01_Introduction.tex
with-arkworks/: Cargo.toml
with-arkworks/src/: main.rs
