[package]
name = "with-arkworks"
version = "0.1.0"
edition = "2024"

[dependencies]
ark-bls12-381 = "0.5.0"
ark-crypto-primitives = { version = "0.5.0", features = ["commitment", "encryption"] }
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-r1cs-std = "0.5.0"
ark-relations = "0.5.1"
ark-serialize = "0.5.0"
ark-snark = "0.5.1"
ark-std = "0.5.0"
